--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mraleksmay.projects.download-manager.client</groupId>
+            <groupId>com.mraleksmay.projects.download-manager</groupId>
             <artifactId>utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
